Added SQTLite support

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,13 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+.idea/gradle.xml
+.idea/misc.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
+.idea/*
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+gradle.properties
